# rusty-web

./: Cargo.toml
migrations/2017-10-29-221412_create_todos/: up.sql
src/: app.rs  errors.rs  handler.rs  main.rs  request.rs  responder.rs  router.rs  static_route.rs
src/framework/: app.rs  errors.rs  handler.rs  mod.rs  request.rs  responder.rs
src/framework/router/: mod.rs  vecrouter.rs
src/handlers/: mod.rs  todos.rs
src/models/: todos.rs
src/router/: mod.rs  tree.rs  vecrouter.rs
