[package]
name = "nightly-server"
version = "0.1.0"
authors = ["Christian Briones <cwbriones@gmail.com>"]

[dependencies]
hyper = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
error-chain = "*"
tokio-core = "*"
futures = "*"
mime = "*"
itertools = "0.7.1"

diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"

r2d2 = "0.7.0"
r2d2-diesel = "0.16.0"
